demos/thunder-attention/mla/error.txt
mla.cuh:1:9: warning: #pragma once in main file
    1 | #pragma once
      |         ^~~~
mla.cuh:1:9: warning: #pragma once in main file
    1 | #pragma once
      |         ^~~~
mla.cuh(147): warning #177-D: function "barrier_satisfied" was declared but never referenced
  static __attribute__((device)) bool barrier_satisfied(int a, int b) { return a == b; }
                                      ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

mla.cuh:1:9: warning: #pragma once in main file
    1 | #pragma once
      |         ^~~~
mla.cuh(147): warning #177-D: function "barrier_satisfied" was declared but never referenced
  static __attribute__((device)) bool barrier_satisfied(int a, int b) { return a == b; }
                                      ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

ptxas info    : 3 bytes gmem
nvlink warning : Skipping incompatible '/usr/lib/x86_64-linux-gnu/librt.a' when searching for -lrt
nvlink warning : Skipping incompatible '/usr/lib/x86_64-linux-gnu/libpthread.a' when searching for -lpthread
nvlink warning : Skipping incompatible '/usr/lib/x86_64-linux-gnu/libdl.a' when searching for -ldl
nvlink warning : Skipping incompatible '/usr/lib/x86_64-linux-gnu/libdl.a' when searching for -ldl
nvlink info    : 0 bytes gmem
mla.cu(72): error: no instance of function template "megakernel::mk" matches the argument list
            argument types are: (pybind11::module_, const char [11], kittens::gl<int, 1, 1, -1, 32> mla_globals<16>::*, kittens::gl<int, 1, 1, -1, 128> mla_globals<16>::*, kittens::gl<int, 1, 1, 1, 1> mla_globals<16>::*, qrot_global mla_globals<16>::*, qv_global mla_globals<16>::*, krot_global mla_globals<16>::*, v_global mla_globals<16>::*, table_global mla_globals<16>::*, o_global mla_globals<16>::*, kittens::gl<float, -1, -1, 16, 512, kittens::st<float, 16, 64>, kittens::st<float, 16, 256>> mla_globals<16>::*, kittens::gl<float, 1, -1, -1, 16, kittens::sv<float, 16UL>> mla_globals<16>::*, completion_flag_global mla_globals<16>::*, const float mla_globals<16>::*, int mla_globals<16>::*)
      kittens::py::bind_kernel< megakernel::mk<mla_config, mla_16_globals, mla_partial<16>
                                ^
./../../../include/megakernel.cuh(172): note #3322-D: number of parameters of function template "megakernel::mk" does not match the call
      void mk(const __attribute__((grid_constant)) globals g) {
           ^

mla.cu(72): error: expected a declaration
      kittens::py::bind_kernel< megakernel::mk<mla_config, mla_16_globals, mla_partial<16>
      ^

mla.cu(89): warning #12-D: parsing restarts here after previous syntax error
      );
       ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

2 errors detected in the compilation of "mla.cu".
make: *** [Makefile:47: mla_decode] Error 2
